turtleart.lessons.turtleart.Main.CircleTen.scala.error
Source:3: error: not found: value i
		cercle(i)
                       ^